# jwt-inspector-cli

./: README.md  pyproject.toml
jwt_inspector/: __init__.py  auditor.py  cli.py  decoder.py
tests/: test_auditor.py
