[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jwt-inspector"
version = "1.0.0"
description = "Decode and security-audit JWTs from the command line — zero dependencies."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Vikas Patel", email = "vikaspatel22062009@gmail.com" }]
keywords = ["jwt", "security", "cli", "auth", "token"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Security",
]

[project.scripts]
jwt-inspector = "jwt_inspector.cli:run_cli"

[project.urls]
Homepage = "https://github.com/VikasPatel22/jwt-inspector-cli"
